tests/baselines/reference/jsFileCompilationLetDeclarationOrder2.errors.txt
error TS5053: Option 'allowJs' cannot be specified with option 'declaration'.
tests/cases/compiler/a.ts(2,1): error TS2448: Block-scoped variable 'a' used before its declaration.


!!! error TS5053: Option 'allowJs' cannot be specified with option 'declaration'.
==== tests/cases/compiler/a.ts (1 errors) ====
    let b = 30;
    a = 10;
    ~
!!! error TS2448: Block-scoped variable 'a' used before its declaration.
==== tests/cases/compiler/b.js (0 errors) ====
    let a = 10;
    b = 30;
    